# lumen

./: Cargo.toml  README.adoc  compose.yaml  mise.toml
.github/: renovate.json
.github/actions/toolchain/: action.yaml
.github/workflows/: rust.yaml
auth/: Cargo.toml  README.adoc
auth/api/: Cargo.toml
auth/api/src/: lib.rs
auth/db/: Cargo.toml
auth/db/src/: lib.rs
auth/db/src/dbs/: mod.rs
auth/db/src/models/: mod.rs  user.rs  user_password.rs  user_provider.rs
auth/db/src/repos/: mod.rs  user.rs  user_password.rs  user_provider.rs
auth/examples/: config.toml
auth/examples/keys/: private.pem  public.pem
auth/src/: config.rs  http_entrypoints.rs  lib.rs
auth/src/auth/: jwt.rs  mod.rs
auth/src/context/: auth.rs  mod.rs
auth/types/: Cargo.toml
auth/types/versions/: Cargo.toml
auth/types/versions/src/: latest.rs  lib.rs
auth/types/versions/src/initial/: mod.rs  system.rs  user.rs
clients/auth/: Cargo.toml
clients/auth/src/: lib.rs
clients/storage/: Cargo.toml
clients/storage/src/: lib.rs
common/: Cargo.toml  diesel.toml
common/migrations/00000000000000_diesel_initial_setup/: up.sql
common/migrations/2026-03-31-204948-0000_init/: up.sql
common/src/: config.rs  db.rs
common/src/api/: mod.rs
common/src/db/: db_typed_uuid.rs  error.rs  mod.rs  pool.rs  schema.rs
dev-tools/dropshot-apis/: Cargo.toml
dev-tools/dropshot-apis/src/: main.rs
dev-tools/migrate/: Cargo.toml  build.rs
dev-tools/migrate/src/: main.rs
dev-tools/xtask/: Cargo.toml
dev-tools/xtask/src/: clippy.rs  common.rs  external.rs  main.rs
docs/: index.adoc
docs/db/: index.adoc  schema.adoc
openapi/auth/: auth-1.0.0-d447a1.json  auth-1.0.0-f0e705.json  auth-latest.json
openapi/storage/: storage-1.0.0-03b863.json  storage-1.0.0-5013f4.json  storage-latest.json
schema/psql/: dbinit.sql
storage/: Cargo.toml  README.adoc
storage-api/: Cargo.toml
storage-types/versions/src/: latest.rs
storage-types/versions/src/initial/: system.rs
storage/api/src/: lib.rs
storage/db/: Cargo.toml
storage/db/src/: error.rs  lib.rs  schema.rs
storage/db/src/dbs/: mod.rs
storage/db/src/models/: mod.rs  object.rs
storage/db/src/repos/: mod.rs  object.rs
storage/examples/: config.toml
storage/src/: http_entrypoints.rs  lib.rs  server.rs
storage/src/context/: mod.rs
storage/types/: Cargo.toml
storage/types/versions/: Cargo.toml
storage/types/versions/src/: latest.rs  lib.rs
storage/types/versions/src/initial/: object.rs  system.rs
uuid-kinds/: Cargo.toml  README.adoc
uuid-kinds/src/: lib.rs
