[workspace]
resolver = "2"
members = [
  "common",
  "dev-tools/dropshot-apis",
  "dev-tools/xtask",
  "storage",
  "storage-api",
  "storage-types",
  "storage-types/versions",
  "uuid-kinds"
]

[workspace.package]
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
camino = { version = "1.2.0", features = ["serde1"] }
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.5", features = ["cargo", "derive", "env", "wrap_help"] }
dropshot = "0.16.6"
dropshot-api-manager = "0.6.0"
dropshot-api-manager-types = "0.6.0"
http = "1.3.1"
httptest = "0.16.3"
lumen-common = { path = "common" }
lumen-storage-api = { path = "storage-api" }
lumen-storage-types = { path = "storage-types" }
lumen-storage-types-versions = { path = "storage-types/versions" }
parse-display = "0.10.0"
schemars = "0.8.22"
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_with = { version = "3.14.0", default-features = false, features = ["alloc", "macros"] }
slog = "2.7"
slog-async = "2.8"
thiserror = "2.0"
tokio = "1.47.0"
toml = "0.8.23"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
openapiv3 = "2.2.0"

newtype-uuid = "1.3.2"
newtype-uuid-macros = "0.1.0"
lumen-uuid-kinds = { path = "uuid-kinds", features = ["serde", "schemars08", "uuid-v4"] }
