[workspace]
resolver = "2"
members = [
  "common",
  "dev-tools/dropshot-apis",
  "dev-tools/xtask",
  "storage",
  "storage/api",
  "storage/db",
  "storage/types",
  "storage/types/versions",
  "uuid-kinds"
]

[workspace.package]
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
camino = { version = "1.2.0", features = ["serde1"] }
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.5", features = ["cargo", "derive", "env", "wrap_help"] }
derive-where = "1.6.1"
iddqd = "0.3.17"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel-enums = { version = "0.2.2", features = ["postgres"] }
dropshot = "0.16.6"
dropshot-api-manager = "0.6.0"
dropshot-api-manager-types = "0.6.0"
http = "1.3.1"
httptest = "0.16.3"
lumen-common = { path = "common" }
lumen-storage-api = { path = "storage/api" }
lumen-storage-db = { path = "storage/db" }
lumen-storage-types = { path = "storage/types" }
lumen-storage-types-versions = { path = "storage/types/versions" }
parse-display = "0.10.0"
schemars = "0.8.22"
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_with = { version = "3.14.0", default-features = false, features = ["alloc", "macros"] }
slog = "2.7"
slog-async = "2.8"
test-strategy = "0.4.5"
proptest = "1.6.0"
thiserror = "2.0"
tokio = "1.47.0"
toml = "0.8.23"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
openapiv3 = "2.2.0"

newtype-uuid = "1.3.2"
newtype-uuid-macros = "0.1.0"
lumen-uuid-kinds = { path = "uuid-kinds", features = ["serde", "schemars08", "uuid-v4"] }
