[package]
name = "lumen-auth"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dropshot.workspace = true
serde.workspace = true
slog.workspace = true
tokio.workspace = true
toml.workspace = true
lumen-common = { workspace = true, features = ["diesel"] }
lumen-auth-api.workspace = true
lumen-auth-db.workspace = true
lumen-auth-types.workspace = true
lumen-auth-types-versions.workspace = true
