[package]
name = "lumen-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
chrono.workspace = true
dropshot.workspace = true
http.workspace = true
schemars = { workspace = true, features = ["chrono", "uuid1"] }
serde.workspace = true
serde_with.workspace = true
parse-display.workspace = true
uuid.workspace = true
derive-where.workspace = true
iddqd.workspace = true
diesel = { workspace = true, optional = true }
lumen-uuid-kinds.workspace = true

[dev-dependencies]
test-strategy.workspace = true
proptest.workspace = true
lumen-uuid-kinds = { workspace = true, features = ["testing"] }

[features]
default = []
diesel = ["dep:diesel"]
