[package]
name = "lumen-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive-where.workspace = true
deadpool = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
dropshot.workspace = true
http.workspace = true
iddqd.workspace = true
lumen-uuid-kinds.workspace = true
parse-display.workspace = true
schemars = { workspace = true, features = ["chrono", "uuid1"] }
secrecy.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
lumen-uuid-kinds = { workspace = true, features = ["testing"] }
proptest.workspace = true
test-strategy.workspace = true
tempfile.workspace = true
toml.workspace = true

[features]
default = []
diesel = ["dep:diesel", "dep:diesel-async", "dep:deadpool"]
