[package]
name = "lumen-storage-api"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
dropshot.workspace = true
dropshot-api-manager.workspace = true
dropshot-api-manager-types.workspace = true

lumen-common.workspace = true
lumen-storage-types.workspace = true
lumen-storage-types-versions.workspace = true
