[package]
name = "lumen-storage"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dropshot.workspace = true
serde.workspace = true
slog.workspace = true
tokio.workspace = true
toml.workspace = true
lumen-common.workspace = true
lumen-storage-api.workspace = true
lumen-storage-types.workspace = true
lumen-storage-types-versions.workspace = true
