[package]
name = "lumen-auth-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel-enums.workspace = true
chrono.workspace = true
lumen-uuid-kinds.workspace = true
lumen-auth-types-versions.workspace = true
lumen-common = { workspace = true, features = ["diesel"] }
serde.workspace = true
thiserror.workspace = true
