[package]
name = "lumen-auth-client"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
slog.workspace = true
serde.workspace = true
schemars.workspace = true
reqwest = { workspace = true, features = ["rustls", "stream"] }
progenitor.workspace = true
progenitor-client.workspace = true
lumen-uuid-kinds.workspace = true
